--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Practicando hasta javascript</title>
 </head>
 <body>
-    
+    <h1>Hola mundo</h1>
+    <script src="./JS/script.js"></script>
 </body>
 </html>
